2006-08-29  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/backend/update.py: fixed a bug if bundles not available under bzr
      0.8.2 (Fixed: #57761)
    * Merge from Stéphane's branch.
    * po/olive-gtk.pot: regenerated
    * po/hu.po: msginit'ed

2006-08-20  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * setup.py: some little corrections (python path + bazaar branding)
    * COPYING.txt: GPL added
    * TODO: renamed to TODO.txt
    * README: renamed to README.txt; added bugreporting section
    * debian/: added debian directory for Ubuntu package
    * olive-gtk: change python path
    * olive.glade: temporarily change the Diff menubutton to a toolbutton

2006-08-20  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * README: added important information about installing
    * po/olive-gtk.pot: regenerated
    * olive/frontend/gtk/push.py: added basic test functionality
    * olive.glade: added test related widgets to the Push dialog
    * po/olive-gtk.pot: generated new .pot file
    * olive/frontend/gtk/bookmark.py: implemented Edit bookmark dialog
    * cmenu.ui: added Edit item to left context menu
    * olive.glade: added Edit bookmark dialog
    * olive/frontend/gtk/__init__.py: added support for bookmark titles
    * olive/frontend/gtk/__init__.py: proper handling of permission denied cases
    * olive/backend/info.py: handle permission denied exception in is_branch()
    * olive/backend/fileops.py: handle permission denied exception in status()
    * olive/backend/errors.py: added PermissionDenied exception
    * po/hu.po: added Hungarian traslation
    * Added gettext support to all files.
    * genpot.sh: added olive-gtk.pot generator script

2006-08-19  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/handler.py: fixed a long existing bug: double-clicking a
      file should open it with an application (supported under Windows)
    * olive/frontend/__init__.py: set menu and toolbar sensitivity